fix a few java 1.5-isms that snuck in
git-svn-id: https://svn.apache.org/repos/asf/velocity/engine/trunk@686300 13f79535-47bb-0310-9956-ffa450edef68